--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "express": "^4.17.1",
     "pg": "^8.5.1",
     "ts-node": "^9.1.1",
