--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^1.28.5",
     "axios": "^0.24.0",
     "express": "^4.17.1",
     "pg": "^8.5.1",
+    "supabase": "^0.5.0",
     "ts-node": "^9.1.1",
     "typeorm": "^0.2.31",
     "yup": "^0.32.8"
